--- a/src/components/organisms/Sidebar/styles.scss
+++ b/src/components/organisms/Sidebar/styles.scss
@@ -1,11 +1,14 @@
 @import '../../../assets/styles/variables';
+@import '../../../assets/styles/mixins';
 
 .sidebar {
   background-color: $white;
   min-width: 230px;
   padding-bottom: 16px;
-  height: 100%;
+  height: auto;
+  min-height: calc(100vh - $headerHeight);
   width: 100%;
+  overflow-y: auto;
 
   &_hidden_mobile {
     @media (max-width: 800px) {
@@ -26,9 +29,10 @@
 
   @media (min-width: 800px) {
     width: 25%;
-    height: 100%;
     min-width: 300px;
     max-width: 400px;
     border-right: 1px solid #88abe3;
   }
+
+  @include customScrollBar(8px, 0);
 }
