--- a/src/components/templates/StartForm/styles.scss
+++ b/src/components/templates/StartForm/styles.scss
@@ -1,4 +1,9 @@
 @import '../../../assets/styles/variables';
+@import '../../../assets/styles/mixins';
+
+body {
+  @include customScrollBar(12px, 0);
+}
 
 .page {
   display: flex;
@@ -13,7 +18,6 @@
     align-items: center;
     flex-direction: column;
     padding-bottom: 10px;
-
     height: auto;
   }
 
@@ -59,10 +63,11 @@
     background-color: $ContentBgImgColor;
     overflow: hidden;
     margin-bottom: 20px;
+    min-height: 200px;
 
     @media (max-width: 800px) {
       width: 100%;
-      height: 30vh;
+      height: 35vh;
       display: block;
       border-radius: 0 0 16px 16px;
     }
@@ -102,7 +107,7 @@
       width: 75%;
     }
 
-    @media (max-height: 800px) {
+    @media (max-width: 800px) and (max-height: 800px) {
       top: 70px;
     }
 
@@ -131,6 +136,10 @@
 
     @media (max-width: 500px) {
       right: -500px;
+    }
+
+    @media (max-width: 800px) and (max-height: 800px) {
+      top: -744px;
     }
   }
 }
